--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button  class="this" id="myBtnThree">Educational Background</button>
         </div>
         <div class="mainPage">
-            <button  class="this" id="myBtnFour">Upcoming</button>
+            <button  class="this" id="myBtnFour">Current Involvement</button>
         </div>        
     </div>
 
@@ -94,12 +94,12 @@
            <div class="modal-content">
                 <div class="modal-header">
                     <span class="close" id="closed4">&times;</span>
-                    <h4>skills and upcoming skills in the pipeline</h4>
+                    <h4>Experience and skills</h4>
                 </div>
 
                 <div class="modal-body">
-                    <p>I have basic skills in HTML5, CSS3, and JavaScript</p>    
-                    <p>I am Soon to be literate in ASP.NET Core MVC(Razor Page) architecture</p>
+                    <p>I am currently involve in a start-up company</p>    
+                    <p>I am assigned in a team developing a web app to be used during medical missions in remote areas</p>
                 </div>    
 
                 <div class="modal-footer">
