--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 
                 <div class="modal-body">    
                     <p>Previously I was a service technician in a local Ford dealership.</p>
+                    <p>Right now, I am doing a project for a startup company.</p>
+                    <p>The tech stack we are using is Vue JS, Vuetify, and Firebase.</p>
                 </div>    
 
                 <div class="modal-footer">
