--- a/index.html
+++ b/index.html
@@ -102,7 +102,12 @@
                 <div class="modal-body">
                     <p>I am currently involve in a start-up company</p>    
                     <p>I am assigned in a team developing a web app to be used during medical missions in remote areas</p>
-                </div>    
+                </div>
+                
+                <div class="modal-body">
+                    <p>I am currently acquiring skills in Java programming language</p>    
+                    <p>Using Object Oriented Programming concepts</p>    
+                </div> 
 
                 <div class="modal-footer">
                     <h5>With a little sprinkle of JavaScript</h5>
