updates for April 2025

--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@
            <p>Using Object Oriented Programming concepts</p>    
        </div> 
 
+       <div class="modal-body">
+        <p>I have experience in version control hosting platform tool, using BitBucket</p>    
+        <p>Our team uses SourceTree as our Git GUI</p>
+    </div>
+
        <div class="modal-footer">
            <h5>With a little sprinkle of JavaScript</h5>
        </div> 
